# billpanel

./: .pre-commit-config.yaml  .secrets.baseline  FORK_CHANGES.md  LICENSE  Makefile  PKGBUILD  PKGBUILD.stable  README.md  debug_with_gdb.sh  fix_remaining_refs.sh  install-local.sh  pyproject.toml  run.py  setup_vpn_nopasswd.sh  temp.md  whitelist-vulture
.github/workflows/: lint.yml  update-aur.yml
.serena/: project.yml
.serena/memories/: architecture_and_patterns.md  development_commands.md  fcitx5_language_widget.md  project_overview.md
docs/: configuration.md  configuration.ru.md
src/billpanel/: __main__.py  config.py  constants.py
src/billpanel/custom_fabric/bspwm/: __init__.py  service.py  widgets.py
src/billpanel/errors/: settings.py
src/billpanel/services/: __init__.py  audio_visualizer.py  battery.py  brightness.py  cache_notification.py  mpris.py  notifications.py  privacy.py  vpn.py
src/billpanel/shared/: animator.py  dbus_helper.py  popover.py  rounded_image.py  scale.py  widget_container.py
src/billpanel/styles/: battery.scss  combined_controls.scss  corners.scss  default_theme.scss  main.scss  ocr.scss  osd.scss  system_tray.scss  theme.scss  variable.scss  workspace.scss
src/billpanel/styles/common/: common.scss  functions.scss  mixins.scss
src/billpanel/styles/dynamic_island/: app_launcher.scss  bluetooth.scss  clipboard.scss  date_notification.scss  emoji.scss  island.scss  network.scss  notifications.scss  pawlette_themes.scss  power.scss  vpn.scss  wallpapers.scss  workspaces_overview.scss
src/billpanel/utils/: bspwm_monitors.py  capture_output.py  config_structure.py  glib_debug.py  hyprland_monitors.py  icon_resolver.py  misc.py  setup_loguru.py  temporary_fixes.py  theming.py  widget_utils.py  window_manager.py
src/billpanel/widgets/: __init__.py  audio_visualizer.py  battery.py  bluetooth.py  combined_controls.py  datetime.py  language.py  network_status.py  ocr.py  osd.py  power.py  screen_corners.py  status_bar.py  system_tray.py  vpn_status.py  workspaces.py
src/billpanel/widgets/dynamic_island/: __init__.py  app_launcher.py  base.py  bluetooth.py  clipboard.py  compact.py  date_notification.py  emoji.py  network.py  notifications.py  pawlette_themes.py  power.py  vpn.py  wallpapers.py  workspaces.py
tests/: test_config.py
